[package]
name = "ocrtrans"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tesseract = "0.15"
openssl = "0.10"
screenshots = { git = "https://github.com/Originalimoc/screenshots-rs-fix", rev = "e9917e1" }
rusty-xinput = "1.3"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest-eventsource = "0.5"
futures = "0.3"
anyhow = "1"
livesplit-hotkey = "0.7"
notify-rust = "4"
windows = { version = "0.52", features = ["Win32", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_UI_Controls"] }
image = "0.24"
imageproc = "0.23"

# [profile.release]
# codegen-units = 1
# lto = true
# panic = "abort"
# strip = true
