[package]
name = "ocrtrans"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tesseract = "0.15"
openssl = "0.10"
xcap = "0.0.10"
rusty-xinput = "1.3"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest-eventsource = "0.6"
futures = "0.3"
anyhow = "1"
livesplit-hotkey = "0.7"
notify-rust = "4"
windows = { version = "0.56", features = ["Win32", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_UI_Controls"] }
image = "0.25"
imageproc = "0.25"
openai = "1.0.0-alpha.14"
dotenvy = "0.15.7"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
